modal shift background fix

--- a/public/main.css
+++ b/public/main.css
@@ -216,7 +216,7 @@ button:disabled i{
 .lower-nav-full{
     background-color:white!important;
     box-shadow: 0px 0px 12px 0px rgba(0,0,0,.2);
-
+    padding-right: 0px !important;
 }
 
 /*tabs*/
@@ -244,7 +244,7 @@ button:disabled i{
 }
 
 /* scrollbar */
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
     width: 12px;
 }
 
@@ -255,7 +255,7 @@ button:disabled i{
 ::-webkit-scrollbar-thumb {
     background: rgba(0, 0, 0, 0.3);
     border-radius: 4px;
-}
+} */
 
 /*search filter*/
 #search-icon{
@@ -925,7 +925,7 @@ audio.feedback-audio::-webkit-media-controls-play-button{
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 70vh;
+    height: 65vh;
     width: 100%;
     margin: 0;
     background-color: var(--dark-grey);
@@ -962,15 +962,12 @@ audio.feedback-audio::-webkit-media-controls-play-button{
     .modal-xl {
         max-width: 1080px;
     }
-    #pdfContainer {
-        height: 75vh;
-    }
 }
 
 /* ensure modal does not shift body/nav */
-.modal.show,
-.modal-open,
-.modal,
-.navbar-bottom {
-    padding-right: 0px !important;
+.modal-open {
+    overflow: hidden;
+    padding-right: 0 !important;
 }
+
+
